# HelloOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  LaunchVS.bat  README.md  SetupDependencies.bat
CMake/: glad.cmake
Scripts/: InitSubmodules.bat
Source/: ApplicationDefines.hpp  main.cpp
cmake/: glad.cmake  glfw.cmake  glm.cmake
